# usa-api

./: README.md  pyproject.toml  seed_data.sh
usa/: asgi.py  settings.py  urls.py  wsgi.py
usaapi/fixtures/: cities.json  states.json  tokens.json  userdetail.json  users.json
usaapi/migrations/: 0001_initial.py
usaapi/models/: __init__.py  city.py  state.py  state_visit.py  user_detail.py  userdetail.py
usaapi/views/: __init__.py  city.py  state.py  state_visit.py  user_detail.py
