[tool.poetry]
name = "usa-api"
version = "0.1.0"
description = "pratcie server using united states"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
pylint = "^3.2.7"
pylint-django = "^2.5.5"
django-cors-headers = "^4.4.0"
colorama = "^0.4.6"
autopep8 = "^2.3.1"
isort = "^5.13.2"
six = "^1.16.0"
pycodestyle = "^2.12.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
